feat: add page bootstrap from cookie session
